# utoville-ecommerce-seller

./: Dockerfile  Jenkinsfile  Makefile  pyproject.toml
account/: urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_point.py
category/migrations/: 0001_initial.py
charge/migrations/: 0001_initial.py
config/: settings.py  urls.py
main/: urls.py  views.py
order/: context_processors.py  models.py  urls.py  util.py  views.py
order/migrations/: 0001_initial.py  0002_remove_order_cancelled_at_remove_order_is_cancelled_and_more.py  0003_remove_orderitem_order_remove_orderitem_product_and_more.py  0004_initial.py  0005_rename_quantity_orderitem_ordered_quantity_and_more.py  0006_orderitem_delivered_at_orderitem_is_delivered_and_more.py  0007_rename_is_cancelled_orderitem_is_refund_requested_and_more.py  0008_orderitem_accepted_at_orderitem_is_accepted.py  0009_orderitem_status.py  0010_alter_order_total_price_alter_order_used_point_and_more.py  0011_orderitem_shipping_fee.py  0012_remove_orderitem_order_status_and_more.py  0013_rename_accepted_at_orderitem_responded_at_and_more.py
product/: models.py
product/migrations/: 0001_initial.py  0002_productqna.py  0003_alter_product_name.py  0004_remove_product_name_product_product_name_and_more.py  0005_productvariant_deleted_at_productvariant_is_deleted_and_more.py
profit/: models.py  urls.py  views.py
profit/migrations/: 0001_initial.py  (+11 more)
qna/: context_processors.py  urls.py  views.py
revenue/: models.py  urls.py  views.py
templates/: footer.html  header.html
util/: views.py
(+15 files in other folders)
