[tool.poetry]
name = "utoville-ecommerce-seller"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "utoville_ecommerce_seller"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
PyMySQL = "^1.0.2"
django-mathfilters = "^1.0.0"
Pillow = "^9.2.0"
django-imagekit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
